# emulator_core

./: CMakeLists.txt  Makefile  README.md
cmake/: ctf.cmake  emu.cmake  toolchain-aarch64.cmake
include/lb/: drv_emu.hpp
src/: iodrv_emu.cc
src/internal/: iodrv_impl.h
tools/: msbuild.bat
